Streamlined SSG Windows service to run JVM in process and appear as "SSG.exe" in Task Manager.
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@11545 219f1c6e-4a0e-43c8-96f2-6e749be13fd4